--- a/app/src/main/res/layout/recyler_view_item.xml
+++ b/app/src/main/res/layout/recyler_view_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
@@ -7,6 +8,13 @@
     <TextView
         android:id="@+id/text_label"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="@dimen/recycler_view_item_text_label_height"
+        android:layout_gravity="center_vertical"
+        android:paddingLeft="@dimen/recycler_view_item_text_label_horizontal_padding"
+        android:paddingRight="@dimen/recycler_view_item_text_label_horizontal_padding"
+        android:textSize="@dimen/recycler_view_item_text_label_text_size"
+        android:gravity="center_vertical"
+        tools:text="Apple"
+        tools:ignore="RtlHardcoded"/>
 
 </LinearLayout>
