--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="recycler_view_item_text_label_height">48dp</dimen>
+    <dimen name="recycler_view_item_text_label_horizontal_padding">16dp</dimen>
+    <dimen name="recycler_view_item_text_label_text_size">16sp</dimen>
 </resources>
