--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,10 +4,9 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
-    <dimen name="left_drawer_list_view_width">240dp</dimen>
-    <dimen name="left_drawer_list_view_divider_height">0dp</dimen>
-    <dimen name="left_drawer_description_text_size">14sp</dimen>
-    <dimen name="left_drawer_description_padding">16dp</dimen>
+    <dimen name="drawer_header_height">96dp</dimen>
+    <dimen name="drawer_header_text_size">14sp</dimen>
+    <dimen name="drawer_header_padding">16dp</dimen>
 
     <dimen name="recycler_view_item_text_label_height">48dp</dimen>
     <dimen name="recycler_view_item_text_label_horizontal_padding">16dp</dimen>
